grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: k8s-ingress-t.zeusis.com
    http:
      paths:
      - path: /grafana
        backend:
          serviceName: grafana
          servicePort: 80
